--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,7 @@
             ],
             "styles": [
               {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+                "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber..css"
               },
               "src/styles.css"
             ],
@@ -75,7 +75,7 @@
             "karmaConfig": "src/karma.conf.js",
             "styles": [
               {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+                "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
               },
               "src/styles.css"
             ],
