--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "9.0.5",
     "@angular/router": "9.0.5",
     "angular-in-memory-web-api": "0.9.0",
+    "bootstrap": "^5.2.3",
     "core-js": "2.5.0",
     "rxjs": "6.5.4",
     "tslib": "1.10.0",
@@ -36,6 +37,7 @@
     "@types/jasmine": "3.5.8",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "13.9.0",
+    "autoprefixer": "^10.4.14",
     "codelyzer": "5.1.2",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -44,6 +46,7 @@
     "karma-coverage-istanbul-reporter": "2.1.1",
     "karma-jasmine": "3.1.1",
     "karma-jasmine-html-reporter": "1.5.2",
+    "postcss": "^8.4.23",
     "protractor": "5.4.3",
     "ts-node": "8.6.2",
     "tslint": "5.9.1",
